--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "reactapp",
   "version": "0.0.0",
+  "homepage": "https://codeasa.github.io/reactapp",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "predeploy": "vite build --base=/reactapp",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^17.0.0",
@@ -12,6 +15,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.1",
+    "gh-pages": "^3.2.3",
     "vite": "^2.4.4"
   }
 }
